[package]
name = "stokes_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2.1"
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"
